# session-bridge

./: .gitignore  .npmignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  package.json  pyproject.toml
.codex-plugin/: plugin.json
.github/workflows/: ci.yml  release.yml
docs/: npm-publish.md  privacy.md  quickstart.md  release.md  terms.md
npm/: bin.cjs  postinstall.cjs
scripts/: release_check.sh  setup_venv.sh
skills/session-bridge/: SKILL.md
src/codex_session_bridge/: __init__.py  cli.py  consistency.py  installer.py  models.py  redaction.py  resume.py  shim.py  storage.py
src/codex_session_bridge/adapters/: __init__.py  claude_projects.py  codex_rollout.py
tests/: test_bridge_store.py  test_claude_import.py  test_cli_clipboard.py  test_cli_copy_local.py  test_cli_import_all.py  test_cli_project_codex_scan.py  test_cli_resume_latest.py  test_cli_shim.py  test_cli_version.py  test_codex_import.py  test_consistency.py  test_installer.py  test_redaction.py
