[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-session-bridge"
version = "0.1.0"
description = "Cross-provider session bridge for Codex workflows"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "Biglone", email = "todo@example.com"}
]
dependencies = []

[project.scripts]
bridge = "codex_session_bridge.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
